fix: breadcrumb folder links are broken - EXO-67575 (#2239)
Before this fix, when checking the breadcrumb of a previewed file, the links of the parent folders of the documents inside a space were broken.
The fix ensures that the folder gets its proper link and fiwes the error in the space group id that didn't convert / characters into : characters while used in URLs